--- a/themes/hugo-tanka/layouts/partials/header.html
+++ b/themes/hugo-tanka/layouts/partials/header.html
@@ -38,3 +38,5 @@
     {{ end }}
   </ul>
 </section>
+
+<link rel="stylesheet" href="{{"css/github-gist.css" | absURL}}" rel="stylesheet" id="theme-stylesheet"> <script src="{{ "js/highlight.pack.js" | absURL }}"></script> <script>hljs.initHighlightingOnLoad();</script>
